--- a/demo.ipynb
+++ b/demo.ipynb
@@ -28,10 +28,10 @@
     "\n",
     "Antes de começarmos a aplicar nosso classificador, precisamos ter certeza que ele estrá usando dados válidos, para isso executamos os seguintes passos:\n",
     "\n",
-    "- remoção de valores corrompidos/perdidos.\n",
-    "- ordenação. (para visualização e debugging mais eficientes)\n",
-    "- remoção de valores redundantes\n",
-    "- renomeação de 'gender_female'para female visto a futura remoção de 'gender_Male'.\n"
+    "- Remoção de valores corrompidos/perdidos;\n",
+    "- Ordenação (para visualização e debugging mais eficientes);\n",
+    "- Remoção de valores redundantes;\n",
+    "- Renomeação de 'gender_female' para 'female' visto a futura remoção de 'gender_Male'.\n"
    ]
   },
   {
@@ -442,13 +442,13 @@
    "source": [
     "## Sobre dados redundantes\n",
     "\n",
-    "- podem ser obtidos a partir a junção de outras caracteristicas do dataframe, tendo menos informação a acrecentar ao modelo.\n",
-    "- são opostos diretos a algum outro elemento, tornando-os desnecessários visto o modelo binário de interpretação.\n",
+    "- Podem ser obtidos a partir a junção de outras características do dataframe, tendo menos informação a acrecentar ao modelo;\n",
+    "- São opostos diretos a algum outro elemento, tornando-os desnecessários visto o modelo binário de interpretação.\n",
     "\n",
     "### Respectivos exemplos\n",
     "\n",
-    "- como sabemos se alguém nunca fumou (smoking_status_never smoked) e temos o estado atual (smoking_status_smokes) e uma medida que aponta falta de dados (smoking_status_Unknown), não precisamos saber se alguém já fumou, visto que é possivel extrapolar esse dado atráves das medidas previamente citadas.\n",
-    "- como temos ambos (gender_Male) e (gender_Female) indicados atráves de um valor binário, podemos eliminar um deles."
+    "- Como sabemos se alguém nunca fumou (smoking_status_never smoked), o estado atual (smoking_status_smokes) e uma medida que aponta falta de dados (smoking_status_Unknown), não precisamos saber se alguém já fumou, visto que é possivel extrapolar esse dado atráves das medidas previamente citadas;\n",
+    "- Como temos ambos (gender_Male) e (gender_Female) indicados atráves de um valor binário, podemos eliminar um deles."
    ]
   },
   {
@@ -480,7 +480,7 @@
    "source": [
     "# Amostragem\n",
     "\n",
-    "Uma vez que temos dados válidos, o primeiro passo para garantir uma análise mais próxima da realidade é a remoção de parcialidades, no nosso caso, identificamos que nossos dados eram majoritariamente de pessoas que não sofreram de AVC's, portanto havia um viés tendendo a essa direção o que poderia reduzir a credibilidade de nosso algoritmo.\n",
+    "Uma vez que temos dados válidos, o primeiro passo para garantir uma análise mais próxima da realidade é a remoção de parcialidades. No nosso caso, identificamos que nossos dados eram majoritariamente de pessoas que não sofreram de AVC's. Portanto, havia um viés tendendo a essa direção, o que poderia reduzir a credibilidade de nosso algoritmo.\n",
     "\n",
     "Para contornar tal problema, decidimos limitar nosso tamanho de amostra para que houvesse uma relação mais próxima de 1 para 1 entre casos em que um individuo sofreu ou não um AVC. "
    ]
@@ -532,7 +532,7 @@
    "source": [
     "## Separando dados em teste e treino\n",
     "\n",
-    "Utilizando a biblioteca python sklearn para separar mais rapidamente."
+    "Utilizando a biblioteca Python SKLearn para separar mais rapidamente."
    ]
   },
   {
@@ -592,13 +592,13 @@
     "\n",
     "\n",
     "- predict():\n",
-    "    - utiliza as medidas obtidas através da regressão linear para 'adivinhar' se alguém terá ou não um AVC\n",
+    "    - Utiliza as medidas obtidas através da regressão linear para 'adivinhar' se alguém terá ou não um AVC;\n",
     "\n",
     "- acurracy():\n",
-    "    - calcula a acurácia do algoritmo, obtida através da comparação entre os dados e a obtenção da média. \n",
+    "    - Calcula a acurácia do algoritmo, obtida através da comparação entre os dados e a obtenção da média;\n",
     "\n",
     "- eqm():\n",
-    "    - calcula o erro quadrático médio, obtido atráves da predição dos valores atráves da formula linear com valores incorretos e compara com os valores corretos. Os gradientes gerados atráves do calculo do eqm com o gradle representam o sentido que esses valores estão em realação ao valor real (- se é menor e + se for maior) sendo o eqm expresso pela equação:\n",
+    "    - Calcula o erro quadrático médio, obtido atráves da predição dos valores atráves da fórmula linear com valores incorretos e compara com os valores corretos. Os gradientes gerados atráves do cálculo do eqm com o Gradle representam o sentido que esses valores estão em relação ao valor real (- se é menor e + se for maior) sendo o eqm expresso pela equação:\n",
     "\n",
     "$$\n",
     "\\text{EQM} = \\frac{1}{N} \\sum_{n=1}^N (y_n - (ax_n + b))^2\n",
@@ -637,7 +637,7 @@
    "source": [
     "# Aplicando regressão linear para predizer AVC's\n",
     "\n",
-    "Para realizar nossas predições com uma regressão linear, nós utilizaremos principalmente dos gradientes obtidos através da função eqm aplicada com o gradle. Estes gradientes serão multiplicados por alpha e subtraidos do valor inicial de ambos, afim de aproximar o valor inicial da realidade do modelo. Realizar esse processo repetidas vezes é o que define e regressão linear, visto que modificamos os valores a e b (w e b) estimados com o gradiente e recalculamos, afim de gerar o EQM desses novos valores. Continua sendo uma aproximação, mas transforma os valores iniciais em estimativas de maior precisão quanto mais iterações houver, visto que modifica o valor por alpha no setido que o gradiente delimita (aponta para o valor real)"
+    "Para realizar nossas predições com uma regressão linear, nós utilizaremos principalmente dos gradientes obtidos através da função eqm aplicada com o gradle. Estes gradientes serão multiplicados por alpha e subtraidos do valor inicial de ambos, afim de aproximar o valor inicial da realidade do modelo. Realizar esse processo repetidas vezes é o que define e regressão linear, visto que modificamos os valores a e b (w e b) estimados com o gradiente e recalculamos, afim de gerar o EQM desses novos valores. Continua sendo uma aproximação, mas transforma os valores iniciais em estimativas de maior precisão quanto mais iterações houver, visto que modifica o valor por alpha no setido que o gradiente delimita (aponta para o valor real)."
    ]
   },
   {
@@ -668,9 +668,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- sobre o código:\n",
-    "    - alpha define o tamanho do passo dado em direção ao gradiente.\n",
-    "    - o laço for pode ter mais iterações afim de atinjir a precisão descrita em markdom e no Read.me, os parametros atuais são de demonstração."
+    "Sobre o código:\n",
+    "- Alpha define o tamanho do passo dado em direção ao gradienteç\n",
+    "- O laço for pode ter mais iterações afim de atingir a precisão descrita em markdown, e no README os parâmetros atuais são de demonstração."
    ]
   },
   {
@@ -680,7 +680,7 @@
    "source": [
     "# Teste de acurácia\n",
     "\n",
-    "Antes de analisarmos os resultados de nosso código, precisamos primeiro nos certificar de sua precisão, para isso iteramos sobre ele algumas vezes e calculamos a média e o desvio padrão na acurácia de nosso algoritmo. "
+    "Antes de analisarmos os resultados de nosso código, precisamos primeiro nos certificar de sua precisão. Para isso, iteramos sobre ele algumas vezes e calculamos a média e o desvio padrão na acurácia de nosso algoritmo. "
    ]
   },
   {
@@ -718,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mantenha em mente que os valores no código acima também são demosntartivos, mude os 'range' para 100 e 100000 respectivamente se desejar testar com valores mais próximos do descrito em texto"
+    "Tendo em mente que os valores no código acima também são demonstrativos, mude os 'range' para 100 e 100000 respectivamente se deseja testar com valores mais próximos aos descritos no texto."
    ]
   },
   {
@@ -747,7 +747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com base nos parametros normalisados, podemos afirmar que nosso classificador tem um funcionamento teórico decente - acertando em media 60% das vezes, dito isso, vamos ao próximo ponto de interesse - o que causa esses resultados?"
+    "Com base nos parametros normalisados, podemos afirmar que nosso classificador tem um funcionamento teórico decente - acertando em média 60% das vezes. Dito isso, vamos ao próximo ponto de interesse - o que causa esses resultados?"
    ]
   },
   {
@@ -757,7 +757,7 @@
    "source": [
     "## Valores de predição\n",
     "\n",
-    "O valor w usado nas equações prévias, contem uma sequência de valores que ao fim das iterações do código, armazena a relevância do fator relacionado a ocorrência de AVC's, devido a ser o valor que modifica X diretamente representando então, a 'força' da relação entre uma carcteristica e o AVC."
+    "O valor w usado nas equações prévias contem uma sequência de valores que ao fim das iterações do código, armazena a relevância do fator relacionado a ocorrência de AVC's, devido a ser o valor que modifica X diretamente representando então, a 'força' da relação entre uma carcterística e o AVC."
    ]
   },
   {
@@ -830,7 +830,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com esses resultados, encontramos não somente diversas conformidades para com o conhecimento já obtido sobre fatores de risco para AVC's, como tambem encontramos erros preocupantes: podemos observar em algumas das iterações que nosso algoritmo pode retornar uma correlação positiva entre traços relevantes para AVC's e uma correlação negativa para fatores de risco imenso, como doênças cardiacas, tornando nossos meios de predição mais questionáveis."
+    "Com esses resultados, encontramos não somente diversas conformidades para com o conhecimento já obtido sobre fatores de risco para AVC's, como também encontramos erros preocupantes: podemos observar em algumas das iterações que nosso algoritmo pode retornar uma correlação positiva entre traços relevantes para AVC's e uma correlação negativa para fatores de risco imenso, como doênças cardíacas, tornando nossos meios de predição mais questionáveis."
    ]
   },
   {
@@ -899,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
