--- a/demo.ipynb
+++ b/demo.ipynb
@@ -669,7 +669,7 @@
    "metadata": {},
    "source": [
     "Sobre o código:\n",
-    "- Alpha define o tamanho do passo dado em direção ao gradienteç\n",
+    "- Alpha define o tamanho do passo dado em direção ao gradiente;\n",
     "- O laço for pode ter mais iterações afim de atingir a precisão descrita em markdown, e no README os parâmetros atuais são de demonstração."
    ]
   },
