--- a/demo.ipynb
+++ b/demo.ipynb
@@ -598,11 +598,12 @@
     "    - Calcula a acurácia do algoritmo, obtida através da comparação entre os dados e a obtenção da média;\n",
     "\n",
     "- eqm():\n",
-    "    - Calcula o erro quadrático médio, obtido atráves da predição dos valores atráves da fórmula linear com valores incorretos e compara com os valores corretos. Os gradientes gerados atráves do cálculo do eqm com o Gradle representam o sentido que esses valores estão em relação ao valor real (- se é menor e + se for maior) sendo o eqm expresso pela equação:\n",
-    "\n",
-    "$$\n",
-    "\\text{EQM} = \\frac{1}{N} \\sum_{n=1}^N (y_n - (ax_n + b))^2\n",
-    "$$"
+    "    - Calcula o erro quadrático médio, obtido atráves da predição dos valores atráves da fórmula linear com valores incorretos e compara com os valores corretos. Os gradientes gerados atráves do cálculo do eqm com o Gradle representam a distancia que esses valores estão em relação ao valor real, sendo o eqm expresso pela equação:\n",
+    "    - \n",
+    "    $$\n",
+    "    \\text{EQM} = \\frac{1}{N} \\sum_{n=1}^N (y_n - (ax_n + b))^2\n",
+    "    $$\n",
+    "    - Note que o gradle calcula as derivadas de $a$ e $b$ no ponto em questão, chamadas de gradientes ao longo do texto."
    ]
   },
   {
@@ -637,7 +638,9 @@
    "source": [
     "# Aplicando regressão linear para predizer AVC's\n",
     "\n",
-    "Para realizar nossas predições com uma regressão linear, nós utilizaremos principalmente dos gradientes obtidos através da função eqm aplicada com o gradle. Estes gradientes serão multiplicados por alpha e subtraidos do valor inicial de ambos, afim de aproximar o valor inicial da realidade do modelo. Realizar esse processo repetidas vezes é o que define e regressão linear, visto que modificamos os valores a e b (w e b) estimados com o gradiente e recalculamos, afim de gerar o EQM desses novos valores. Continua sendo uma aproximação, mas transforma os valores iniciais em estimativas de maior precisão quanto mais iterações houver, visto que modifica o valor por alpha no setido que o gradiente delimita (aponta para o valor real)."
+    "Para realizar nossas predições com uma regressão linear, nós utilizaremos principalmente dos gradientes obtidos através da função eqm aplicada com o gradle. Estes gradientes serão multiplicados por alpha e subtraidos do valor inicial de ambos, esses gradientes apontam para os pontos de minimo/maximo locais, nos levando ao valor verdadeiro do numero que estimamos eventualmente. \n",
+    "\n",
+    "Realizar esse processo repetidas vezes é o que define e regressão linear, visto que modificamos os valores a e b (w e b) estimados com o gradiente e recalculamos, afim de gerar o EQM desses novos valores. Continua sendo uma aproximação, mas transforma os valores iniciais em estimativas de maior precisão quanto mais iterações houver, visto que modifica o valor por alpha no setido que o gradiente delimita (aponta para o valor real)."
    ]
   },
   {
@@ -899,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.3"
   },
   "orig_nbformat": 4
  },
